--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "prebuild:icon": "yarn workspace @semcore/icon prebuild",
     "prebuild:illustration": "yarn workspace @semcore/illustration prebuild",
     "test": "jest --no-cache",
+    "vo-test:setup": "npx @guidepup/setup",
+    "vo-test": "playwright test",
     "playground": "yarn workspace @semcore/playground start",
     "website": "yarn --cwd website start",
     "coverage": "jest --no-cache --coverage",
@@ -34,7 +36,9 @@
   },
   "devDependencies": {
     "@crowdin/cli": "3.7.9",
+    "@guidepup/playwright": "0.6.1",
     "@mailchimp/mailchimp_marketing": "3.0.30",
+    "@playwright/test": "1.25.1",
     "@semcore/theme-redesign": "1.5.12",
     "@types/jest": "29.0.0",
     "@typescript-eslint/eslint-plugin": "5.10.2",
@@ -57,6 +61,7 @@
     "lerna": "4.0.0",
     "lint-staged": "10.2.9",
     "picocolors": "1.0.0",
+    "playwright": "1.25.1",
     "prettier": "2.6.2",
     "pretty-quick": "1.11.1",
     "tsm": "2.2.2",
@@ -157,6 +162,7 @@
     "tools/code-mod",
     "tools/continuous-delivery",
     "tools/dep-checker",
+    "tools/esbuild-plugin-semcore",
     "tools/flags-sprite",
     "tools/gcs-upload",
     "tools/generator-component",
