--- a/tools/jest-preset-ui/package.json
+++ b/tools/jest-preset-ui/package.json
@@ -26,8 +26,9 @@
     "@types/jest-axe": "3.5.1"
   },
   "peerDependencies": {
-    "esbuild": "*",
+    "@guidepup/guidepup": "*",
     "@semcore/esbuild-plugin-semcore": "*",
+    "esbuild": "*",
     "jest": "29.0.1",
     "jest-environment-jsdom": "29.0.1"
   },
