--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -151,3 +151,13 @@ jobs:
         uses: guidepup/setup-action@0.1.3
       - name: Voice Over testing
         run: yarn vo-test
+      - name: Github GPG Auth
+        uses: crazy-max/ghaction-import-gpg@v4.4.0
+        with:
+          gpg_private_key: ${{ secrets.BOT_ACCOUNT_GPG_PRIVATE_KEY }}
+          git_user_signingkey: true
+          git_commit_gpgsign: true
+          git_committer_name: semrush-ci-whale
+          git_committer_email: semrush-ci-whale@users.noreply.github.com
+      - name: Push changed a11y reports
+        run: git add . && git commit -m "[chore] automatically updated accessibility reports" && git push || echo "noting to commit"
