--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -131,11 +131,9 @@ jobs:
           yarn --non-interactive --frozen-lockfile
           cd website
           yarn --non-interactive --frozen-lockfile
-  vo-test:
+  vo-build-icons:
     runs-on: macos-latest
-    needs:
-      - build
-      - vo-setup
+    needs: vo-setup
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
@@ -147,14 +145,40 @@ jobs:
             */*/node_modules
             website/node_modules
           key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}--${{ hashFiles('website/yarn.lock') }}
-      - name: Restore cache build
+      - name: Cache build
+        uses: actions/cache@v2
+        id: cache-build
+        with:
+          path: |
+            semcore/icon/**/*.js
+            semcore/icon/**/*.d.ts
+          key: build-icons-${{ hashFiles('semcore/icon', 'tsconfig.json', 'yarn.lock') }}
+      - name: Build
+        if: steps.cache-build.outputs.cache-hit != 'true'
+        run: yarn build:icons
+  vo-test:
+    runs-on: macos-latest
+    needs:
+      - vo-setup
+      - vo-build-icons
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+      - name: Restore cache node modules
         uses: actions/cache@v2
         with:
           path: |
-            **/lib
+            node_modules
+            */*/node_modules
+            website/node_modules
+          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}--${{ hashFiles('website/yarn.lock') }}
+      - name: Restore icons build cache
+        uses: actions/cache@v2
+        with:
+          path: |
             semcore/icon/**/*.js
             semcore/icon/**/*.d.ts
-          key: build-${{ hashFiles('semcore/**', 'tools/**', 'tsconfig.json', 'yarn.lock') }}
+          key: build-icons-${{ hashFiles('semcore/icon', 'tsconfig.json', 'yarn.lock') }}
       - name: Install Headless Browser
         run: npx playwright install
       - name: Enable VoiceOver Automation
