--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -179,8 +179,8 @@ jobs:
             semcore/icon/**/*.js
             semcore/icon/**/*.d.ts
           key: build-icons-${{ hashFiles('semcore/icon', 'tsconfig.json', 'yarn.lock') }}
-      - name: Install Headless Browser
-        run: npx playwright install
+      - name: Install Browser
+        run: npx playwright install webkit
       - name: Enable VoiceOver Automation
         uses: guidepup/setup-action@0.1.3
       - name: Voice Over testing
