--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -75,7 +75,11 @@ jobs:
           path: |
             **/lib
             semcore/icon/**/*.js
+            semcore/icon/**/*.mjs
             semcore/icon/**/*.d.ts
+            semcore/illustration/**/*.js
+            semcore/illustration/**/*.mjs
+            semcore/illustration/**/*.d.ts
           key: build-${{ hashFiles('semcore/**', 'tools/**', 'tsconfig.json', 'yarn.lock') }}
       - name: Lint
         run: yarn lint
