[global] added voice-over testing (#372)
* [global] added voice-over testing

* [esbuild-plugin-semcore] added fallback for jest mapper

* [global] screen reader automated testing reports generating

* [accordion] added vocie over tests

* [ci] automatically update screen reader reports

* [ci] include build before vo testing as far as prebuilt icons is needed for stands compilation

* [ci] vo tests icons prebuild job

* [slider] temporary disabled lastSpokenPhrase check for ci dev

* [tests] added web content awaiter for vo-tests

* [chore] trying to debug voice over on ci

* [slider] removed lastSpokenPhrase call from vo test

* [slider] tried not to use double interaction in slider vo tests

* [tests] temporary enabled videos recording of vo tests

* [chore] adding debug video sender to debug voice over run

* [tests] cleanup after resolving vo issues

--- a/tools/jest-preset-ui/package.json
+++ b/tools/jest-preset-ui/package.json
@@ -26,6 +26,9 @@
     "@types/jest-axe": "3.5.1"
   },
   "peerDependencies": {
+    "@guidepup/guidepup": "*",
+    "@semcore/esbuild-plugin-semcore": "*",
+    "esbuild": "*",
     "jest": "29.0.1",
     "jest-environment-jsdom": "29.0.1"
   },
