--- a/semcore/dropdown/package.json
+++ b/semcore/dropdown/package.json
@@ -13,9 +13,9 @@
     "test": "jest"
   },
   "dependencies": {
-    "@semcore/utils": "^3.15",
     "@semcore/flex-box": "^4",
-    "@semcore/popper": "^4"
+    "@semcore/popper": "^4",
+    "@semcore/utils": "^3.15"
   },
   "peerDependencies": {
     "@semcore/core": "^1.11",
@@ -30,6 +30,8 @@
     "directory": "semcore/dropdown"
   },
   "devDependencies": {
+    "@guidepup/playwright": "0.6.1",
+    "@playwright/test": "1.25.1",
     "@semcore/jest-preset-ui": "1.0.0"
   }
 }
