--- a/semcore/select/package.json
+++ b/semcore/select/package.json
@@ -12,14 +12,14 @@
     "test": "jest"
   },
   "dependencies": {
-    "@semcore/utils": "^3.15",
     "@semcore/base-trigger": "^3.0.0",
-    "@semcore/icon": "^2.16",
-    "@semcore/dropdown-menu": "^3.0.0",
-    "@semcore/input": "^3.0.0",
     "@semcore/checkbox": "^6",
-    "@semcore/flex-box": "^4",
     "@semcore/divider": "^3",
+    "@semcore/dropdown-menu": "^3.0.0",
+    "@semcore/flex-box": "^4",
+    "@semcore/icon": "^2.16",
+    "@semcore/input": "^3.0.0",
+    "@semcore/utils": "^3.15",
     "classnames": "2.2.6"
   },
   "peerDependencies": {
@@ -35,6 +35,8 @@
     "directory": "semcore/select"
   },
   "devDependencies": {
+    "@guidepup/playwright": "0.6.1",
+    "@playwright/test": "1.25.1",
     "@semcore/jest-preset-ui": "1.0.0"
   }
 }
