[website] Add build illustration before build site
Signed-off-by: r.lysov <r.lysov@semrush.com>

--- a/website/Dockerfile
+++ b/website/Dockerfile
@@ -12,6 +12,7 @@ COPY ./ ./
 
 RUN yarn install --silent --non-interactive --frozen-lockfile
 RUN yarn build:icons
+RUN yarn build:illustration
 RUN yarn --cwd website install --silent --non-interactive --frozen-lockfile
 RUN yarn --cwd website build
 
