--- a/website/nginx.conf
+++ b/website/nginx.conf
@@ -14,6 +14,7 @@ http {
 
         resolver 127.0.0.11;
         autoindex off;
+        absolute_redirect off;
 
         server_name _;
         server_tokens off;
