[website] Add redirect with trailing slash
Signed-off-by: r.lysov <r.lysov@semrush.com>

--- a/website/nginx.conf
+++ b/website/nginx.conf
@@ -22,6 +22,7 @@ http {
         root /app/static;
 
         location / {
+          rewrite ^([^.]*[^/])$ $1/ permanent;
           rewrite /intergalactic/(.*) /$1  break;
         }
 
