[chore] fixed formal a11y tests passing and updated snapshots
<!--- Commit was signed off by phytonmk@gmail.com with GPG key ID CF2DC815AE956C1F -->

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -185,6 +185,8 @@ jobs:
           key: build-icons-${{ hashFiles('semcore/icon', 'tsconfig.json', 'yarn.lock') }}
       - name: Install Browser
         run: npx playwright install webkit
+      - name: Disable dictation auto enable
+        run: defaults write com.apple.HIToolbox AppleDictationAutoEnable -bool false
       - name: Enable VoiceOver Automation
         uses: guidepup/setup-action@0.4.0
       - name: Voice Over testing
