[data-table] improved component accessibility in cases of virtual scroll and columns sorting
<!--- Commit was signed off by phytonmk@gmail.com with GPG key ID CF2DC815AE956C1F -->

--- a/semcore/data-table/package.json
+++ b/semcore/data-table/package.json
@@ -21,6 +21,8 @@
   },
   "devDependencies": {
     "@semcore/jest-preset-ui": "1.0.0",
+    "@guidepup/playwright": "0.6.1",
+    "@playwright/test": "1.25.1",
     "@semcore/base-trigger": "*",
     "@semcore/dropdown-menu": "*",
     "@semcore/typography": "*",
