--- a/semcore/input-mask/package.json
+++ b/semcore/input-mask/package.json
@@ -13,8 +13,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "@semcore/utils": "^3.15",
     "@semcore/input": "^3.0.0",
+    "@semcore/utils": "^3.15",
     "text-mask-core": "5.1.2"
   },
   "peerDependencies": {
@@ -30,6 +30,8 @@
     "directory": "semcore/input-mask"
   },
   "devDependencies": {
+    "@guidepup/playwright": "0.6.1",
+    "@playwright/test": "1.25.1",
     "@semcore/jest-preset-ui": "1.0.0"
   }
 }
