--- a/semcore/progress-bar/package.json
+++ b/semcore/progress-bar/package.json
@@ -13,8 +13,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "@semcore/utils": "^3.15",
-    "@semcore/flex-box": "^4"
+    "@semcore/flex-box": "^4",
+    "@semcore/utils": "^3.15"
   },
   "peerDependencies": {
     "@semcore/core": "^1.11",
@@ -29,6 +29,8 @@
     "directory": "semcore/progress-bar"
   },
   "devDependencies": {
+    "@guidepup/playwright": "0.6.1",
+    "@playwright/test": "1.25.1",
     "@semcore/jest-preset-ui": "1.0.0"
   }
 }
