--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -148,18 +148,22 @@ jobs:
             node_modules
             */*/node_modules
             website/node_modules
-          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}--${{ hashFiles('website/yarn.lock') }}
+          key: modules--${{ runner.os }}-${{ hashFiles('yarn.lock') }}--${{ hashFiles('website/yarn.lock') }}
       - name: Cache build
         uses: actions/cache@v2
         id: cache-build
         with:
           path: |
             semcore/icon/**/*.js
+            semcore/icon/**/*.mjs
             semcore/icon/**/*.d.ts
+            semcore/illustration/**/*.js
+            semcore/illustration/**/*.mjs
+            semcore/illustration/**/*.d.ts
           key: build-icons-${{ hashFiles('semcore/icon', 'tsconfig.json', 'yarn.lock') }}
       - name: Build
         if: steps.cache-build.outputs.cache-hit != 'true'
-        run: yarn build:icons
+        run: yarn && yarn build:icons
   vo-test:
     runs-on: macos-latest
     needs:
@@ -175,13 +179,17 @@ jobs:
             node_modules
             */*/node_modules
             website/node_modules
-          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}--${{ hashFiles('website/yarn.lock') }}
+          key: modules--${{ runner.os }}-${{ hashFiles('yarn.lock') }}--${{ hashFiles('website/yarn.lock') }}
       - name: Restore icons build cache
         uses: actions/cache@v2
         with:
           path: |
             semcore/icon/**/*.js
+            semcore/icon/**/*.mjs
             semcore/icon/**/*.d.ts
+            semcore/illustration/**/*.js
+            semcore/illustration/**/*.mjs
+            semcore/illustration/**/*.d.ts
           key: build-icons-${{ hashFiles('semcore/icon', 'tsconfig.json', 'yarn.lock') }}
       - name: Install Browser
         run: npx playwright install webkit
