[core] updated lock file
<!--- Commit was signed off by phytonmk@gmail.com with GPG key ID CF2DC815AE956C1F -->

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "pnpm build:icons && pnpm build:illustration && pnpm --filter @semcore/* --filter !@semcore/icon --filter !@semcore/ui run build",
     "build:icons": "pnpm --filter @semcore/icon run build",
     "build:illustration": "pnpm workspace @semcore/illustration build",
-    "typecheck": "pnpm --filter @semcore/* --filter !@semcore/babel-plugin-root --filter !@semcore/babel-plugin-shadow --filter !@semcore/babel-plugin-styles --filter !@semcore/babel-plugin-react-semcore --filter !@semcore/babel-preset-ui --filter !@semcore/jest-preset-ui --filter !@semcore/babel-plugin-recharts --filter !@semcore/email --filter !@semcore/dep-checker --filter !@semcore/code-mod --filter !@semcore/icon-transform-svg --filter !@semcore/shadow-loader --filter !@semcore/generator-component exec tsc --noEmit",
+    "typecheck": "pnpm --filter @semcore/* --filter !@semcore/babel-plugin-root --filter !@semcore/babel-plugin-styles --filter !@semcore/babel-plugin-react-semcore --filter !@semcore/babel-preset-ui --filter !@semcore/jest-preset-ui --filter !@semcore/babel-plugin-recharts --filter !@semcore/email --filter !@semcore/dep-checker --filter !@semcore/code-mod --filter !@semcore/icon-transform-svg --filter !@semcore/shadow-loader --filter !@semcore/generator-component exec tsc --noEmit",
     "prebuild": "rm -rf semcore/**/lib && pnpm prebuild:icon && pnpm prebuild:illustration",
     "prebuild:icon": "pnpm --filter @semcore/icon run prebuild",
     "prebuild:illustration": "pnpm --filter @semcore/illustration run prebuild",
@@ -34,7 +34,6 @@
     "@mailchimp/mailchimp_marketing": "3.0.30",
     "@semcore/babel-plugin-recharts": "workspace:*",
     "@semcore/babel-plugin-root": "workspace:*",
-    "@semcore/babel-plugin-shadow": "workspace:*",
     "@semcore/babel-plugin-styles": "workspace:*",
     "@semcore/babel-preset-ui": "workspace:*",
     "@semcore/builder": "workspace:*",
