--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -181,6 +181,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
+      - uses: pnpm/action-setup@v2.0.1
+        name: Install pnpm
+        id: pnpm-install
+        with:
+          version: 7
+          run_install: false
       - name: Cache node modules
         uses: actions/cache@v2
         id: cache-modules
@@ -205,6 +211,12 @@ jobs:
         with:
           version: 7.0.0
       - uses: actions/setup-node@v2
+      - uses: pnpm/action-setup@v2.0.1
+        name: Install pnpm
+        id: pnpm-install
+        with:
+          version: 7
+          run_install: false
       - name: Restore cache node modules
         uses: actions/cache@v2
         with:
