[ci] temporary disabled automatic vo reports update as far as it may break components publish
<!--- Commit was signed off by phytonmk@gmail.com with GPG key ID CF2DC815AE956C1F -->

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -196,5 +196,5 @@ jobs:
           git_commit_gpgsign: true
           git_committer_name: semrush-ci-whale
           git_committer_email: semrush-ci-whale@users.noreply.github.com
-      - name: Push changed a11y reports
-        run: git add . && git commit -m "[chore] automatically updated accessibility reports" && git push || echo "noting to commit"
+      # - name: Push changed a11y reports
+      #   run: git add . && git commit -m "[chore] automatically updated accessibility reports" && git push || echo "noting to commit"
