[ci] use squash commits for release pr merge as far as github loses signatures on rebases
<!--- Commit was signed off by phytonmk@gmail.com with GPG key ID CF2DC815AE956C1F -->

--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -67,4 +67,4 @@ jobs:
       - name: merge pull request
         run: |
           gh pr ready "${{ env.release_branch_name }}"
-          gh pr merge "${{ env.release_branch_name }}" --rebase
+          gh pr merge "${{ env.release_branch_name }}" --squash
