--- a/semcore/ui/components.json
+++ b/semcore/ui/components.json
@@ -72,6 +72,7 @@
     "@semcore/tooltip",
     "@semcore/typography",
     "@semcore/utils",
-    "@semcore/widget-empty"
+    "@semcore/widget-empty",
+    "@semcore/wizard"
   ]
 }
