--- a/semcore/pills/package.json
+++ b/semcore/pills/package.json
@@ -13,9 +13,9 @@
     "test": "jest"
   },
   "dependencies": {
-    "@semcore/utils": "^3.15",
     "@semcore/flex-box": "^4",
-    "@semcore/neighbor-location": "^2"
+    "@semcore/neighbor-location": "^2",
+    "@semcore/utils": "^3.15"
   },
   "peerDependencies": {
     "@semcore/core": "^1.11",
@@ -30,8 +30,10 @@
     "directory": "semcore/pills"
   },
   "devDependencies": {
-    "@semcore/jest-preset-ui": "1.0.0",
+    "@guidepup/playwright": "0.6.1",
+    "@playwright/test": "1.25.1",
+    "@semcore/badge": "*",
     "@semcore/icon": "*",
-    "@semcore/badge": "*"
+    "@semcore/jest-preset-ui": "1.0.0"
   }
 }
