[color-picker] added missing meta-data
<!--- Commit was signed off by phytonmk@gmail.com with GPG key ID CF2DC815AE956C1F -->

--- a/semcore/color-picker/package.json
+++ b/semcore/color-picker/package.json
@@ -30,6 +30,11 @@
   "devDependencies": {
     "@semcore/jest-preset-ui": "1.0.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/semrush/intergalactic.git",
+    "directory": "semcore/color-picker"
+  },
   "jest": {
     "preset": "@semcore/jest-preset-ui"
   }
