[global] added react types to components dev dependencies
<!--- Commit was signed off by phytonmk@gmail.com with GPG key ID CF2DC815AE956C1F -->

--- a/semcore/breakpoints/package.json
+++ b/semcore/breakpoints/package.json
@@ -27,6 +27,7 @@
     "directory": "semcore/breakpoints"
   },
   "devDependencies": {
+    "@types/react": "16.8 - 17",
     "@semcore/jest-preset-ui": "1.0.0"
   }
 }
