--- a/semcore/flags/package.json
+++ b/semcore/flags/package.json
@@ -31,6 +31,7 @@
     "directory": "semcore/flags"
   },
   "devDependencies": {
+    "@types/react": "16.8 - 17",
     "@semcore/flags-sprite": "1.0.0",
     "@semcore/jest-preset-ui": "1.0.0"
   }
