--- a/semcore/icon/package.json
+++ b/semcore/icon/package.json
@@ -33,6 +33,7 @@
     "directory": "semcore/icon"
   },
   "devDependencies": {
+    "@types/react": "16.8 - 17",
     "@semcore/jest-preset-ui": "1.0.0",
     "@semcore/icon-transform-svg": "1.0.0"
   }
