--- a/semcore/neighbor-location/package.json
+++ b/semcore/neighbor-location/package.json
@@ -28,6 +28,7 @@
     "directory": "semcore/neighbor-location"
   },
   "devDependencies": {
+    "@types/react": "16.8 - 17",
     "@semcore/jest-preset-ui": "1.0.0"
   }
 }
