--- a/semcore/notice-bubble/package.json
+++ b/semcore/notice-bubble/package.json
@@ -32,6 +32,7 @@
     "directory": "semcore/notice-bubble"
   },
   "devDependencies": {
+    "@types/react": "16.8 - 17",
     "@semcore/jest-preset-ui": "1.0.0"
   }
 }
