--- a/semcore/popper/package.json
+++ b/semcore/popper/package.json
@@ -36,6 +36,7 @@
     "directory": "semcore/popper"
   },
   "devDependencies": {
+    "@types/react": "16.8 - 17",
     "@semcore/jest-preset-ui": "1.0.0"
   }
 }
