--- a/semcore/project-create/package.json
+++ b/semcore/project-create/package.json
@@ -40,6 +40,7 @@
     "directory": "semcore/project-create"
   },
   "devDependencies": {
+    "@types/react": "16.8 - 17",
     "@semcore/jest-preset-ui": "1.0.0"
   },
   "overrides": {
