--- a/semcore/select/package.json
+++ b/semcore/select/package.json
@@ -35,6 +35,7 @@
     "directory": "semcore/select"
   },
   "devDependencies": {
+    "@types/react": "16.8 - 17",
     "@guidepup/playwright": "0.6.1",
     "@playwright/test": "1.25.1",
     "@semcore/jest-preset-ui": "1.0.0"
