--- a/semcore/side-panel/package.json
+++ b/semcore/side-panel/package.json
@@ -35,6 +35,7 @@
     "directory": "semcore/side-panel"
   },
   "devDependencies": {
+    "@types/react": "16.8 - 17",
     "@semcore/jest-preset-ui": "1.0.0"
   }
 }
