--- a/semcore/slider/package.json
+++ b/semcore/slider/package.json
@@ -29,6 +29,7 @@
     "directory": "semcore/slider"
   },
   "devDependencies": {
+    "@types/react": "16.8 - 17",
     "@guidepup/playwright": "0.6.1",
     "@playwright/test": "1.25.1",
     "@semcore/jest-preset-ui": "1.0.0"
