--- a/semcore/switch/package.json
+++ b/semcore/switch/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@guidepup/playwright": "0.6.1",
     "@playwright/test": "1.25.1",
+    "@types/react": "16.8 - 17",
     "@semcore/jest-preset-ui": "1.0.0"
   }
 }
