--- a/semcore/table/package.json
+++ b/semcore/table/package.json
@@ -34,6 +34,7 @@
     "directory": "semcore/table"
   },
   "devDependencies": {
+    "@types/react": "16.8 - 17",
     "@semcore/jest-preset-ui": "1.0.0"
   }
 }
