--- a/semcore/tooltip/package.json
+++ b/semcore/tooltip/package.json
@@ -30,6 +30,7 @@
     "directory": "semcore/tooltip"
   },
   "devDependencies": {
+    "@types/react": "16.8 - 17",
     "@semcore/jest-preset-ui": "1.0.0"
   }
 }
