--- a/semcore/wizard/package.json
+++ b/semcore/wizard/package.json
@@ -26,6 +26,7 @@
     "preset": "@semcore/jest-preset-ui"
   },
   "devDependencies": {
+    "@types/react": "16.8 - 17",
     "@semcore/jest-preset-ui": "1.0.0"
   }
 }
