--- a/semcore/accordion/package.json
+++ b/semcore/accordion/package.json
@@ -31,6 +31,7 @@
     "directory": "semcore/accordion"
   },
   "devDependencies": {
+    "@types/react": "16.8 - 17",
     "@guidepup/playwright": "0.6.1",
     "@playwright/test": "1.25.1",
     "@semcore/jest-preset-ui": "1.0.0"
