--- a/semcore/base-trigger/package.json
+++ b/semcore/base-trigger/package.json
@@ -33,6 +33,7 @@
     "directory": "semcore/base-trigger"
   },
   "devDependencies": {
+    "@types/react": "16.8 - 17",
     "@semcore/jest-preset-ui": "1.0.0"
   }
 }
