--- a/semcore/button/package.json
+++ b/semcore/button/package.json
@@ -31,6 +31,7 @@
     "directory": "semcore/button"
   },
   "devDependencies": {
+    "@types/react": "16.8 - 17",
     "@semcore/jest-preset-ui": "1.0.0"
   }
 }
