--- a/semcore/color-picker/package.json
+++ b/semcore/color-picker/package.json
@@ -28,6 +28,7 @@
     "react": "16.8 - 17"
   },
   "devDependencies": {
+    "@types/react": "16.8 - 17",
     "@semcore/jest-preset-ui": "1.0.0"
   },
   "repository": {
