--- a/semcore/counter/package.json
+++ b/semcore/counter/package.json
@@ -29,6 +29,7 @@
     "directory": "semcore/counter"
   },
   "devDependencies": {
+    "@types/react": "16.8 - 17",
     "@semcore/jest-preset-ui": "1.0.0"
   }
 }
