--- a/semcore/date-picker/package.json
+++ b/semcore/date-picker/package.json
@@ -36,6 +36,7 @@
     "directory": "semcore/date-picker"
   },
   "devDependencies": {
+    "@types/react": "16.8 - 17",
     "@semcore/jest-preset-ui": "1.0.0"
   }
 }
