--- a/semcore/dropdown-menu/package.json
+++ b/semcore/dropdown-menu/package.json
@@ -32,6 +32,7 @@
     "directory": "semcore/dropdown-menu"
   },
   "devDependencies": {
+    "@types/react": "16.8 - 17",
     "@guidepup/playwright": "0.6.1",
     "@playwright/test": "1.25.1",
     "@semcore/jest-preset-ui": "1.0.0"
