--- a/semcore/errors/package.json
+++ b/semcore/errors/package.json
@@ -34,6 +34,7 @@
     "directory": "semcore/errors"
   },
   "devDependencies": {
+    "@types/react": "16.8 - 17",
     "@semcore/jest-preset-ui": "1.0.0",
     "@types/node": "^17.0.45"
   }
