--- a/semcore/feature-popover/package.json
+++ b/semcore/feature-popover/package.json
@@ -32,6 +32,7 @@
     "directory": "semcore/feature-popover"
   },
   "devDependencies": {
+    "@types/react": "16.8 - 17",
     "@semcore/jest-preset-ui": "1.0.0"
   }
 }
