--- a/semcore/feedback-form/package.json
+++ b/semcore/feedback-form/package.json
@@ -36,6 +36,7 @@
     "directory": "semcore/feedback-form"
   },
   "devDependencies": {
+    "@types/react": "16.8 - 17",
     "@semcore/jest-preset-ui": "1.0.0"
   },
   "overrides": {
