--- a/semcore/inline-edit/package.json
+++ b/semcore/inline-edit/package.json
@@ -18,6 +18,7 @@
     "@semcore/animation": "^1.5.0"
   },
   "devDependencies": {
+    "@types/react": "16.8 - 17",
     "@semcore/jest-preset-ui": "1.0.0"
   },
   "peerDependencies": {
