--- a/semcore/input-mask/package.json
+++ b/semcore/input-mask/package.json
@@ -30,6 +30,7 @@
     "directory": "semcore/input-mask"
   },
   "devDependencies": {
+    "@types/react": "16.8 - 17",
     "@guidepup/playwright": "0.6.1",
     "@playwright/test": "1.25.1",
     "@semcore/jest-preset-ui": "1.0.0"
