--- a/semcore/modal/package.json
+++ b/semcore/modal/package.json
@@ -34,6 +34,7 @@
     "directory": "semcore/modal"
   },
   "devDependencies": {
+    "@types/react": "16.8 - 17",
     "@guidepup/playwright": "0.6.1",
     "@playwright/test": "1.25.1",
     "@semcore/jest-preset-ui": "1.0.0"
