--- a/semcore/pills/package.json
+++ b/semcore/pills/package.json
@@ -30,6 +30,7 @@
     "directory": "semcore/pills"
   },
   "devDependencies": {
+    "@types/react": "16.8 - 17",
     "@guidepup/playwright": "0.6.1",
     "@playwright/test": "1.25.1",
     "@semcore/badge": "*",
