--- a/semcore/utils/package.json
+++ b/semcore/utils/package.json
@@ -11,6 +11,7 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@types/react": "16.8 - 17",
     "@semcore/babel-plugin-react-semcore": "^4.2.1",
     "@semcore/core": "^1",
     "@semcore/jest-preset-ui": "1.0.0",
