--- a/semcore/widget-empty/package.json
+++ b/semcore/widget-empty/package.json
@@ -31,6 +31,7 @@
     "directory": "semcore/widget-empty"
   },
   "devDependencies": {
+    "@types/react": "16.8 - 17",
     "@semcore/jest-preset-ui": "1.0.0"
   }
 }
