[illustration] changed styled-components to css modules
<!--- Commit was signed off by freeyoungstrong@gmail.com with GPG key ID EA2F630031F24EEF -->

--- a/.eslintignore
+++ b/.eslintignore
@@ -4,4 +4,6 @@ lib
 website
 semcore/icon/**/**/*.js
 semcore/icon/**/**/*.d.ts
+semcore/illustration/**/*.js
+semcore/illustration/**/*.d.ts
 **/__fixtures__/**
