[chore] added esbuild-plugin-semcore as global dependency
<!--- Commit was signed off by phytonmk@gmail.com with GPG key ID CF2DC815AE956C1F -->

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@semcore/babel-plugin-root": "workspace:*",
     "@semcore/babel-plugin-styles": "workspace:*",
     "@semcore/babel-preset-ui": "workspace:*",
+    "@semcore/esbuild-plugin-semcore": "workspace:*",
     "@semcore/builder": "workspace:*",
     "@semcore/core": "workspace:*",
     "@semcore/d3-chart": "workspace:*",
