--- a/website/package.json
+++ b/website/package.json
@@ -18,7 +18,6 @@
     "dayjs": "1.10.4",
     "dotenv": "8.2.0",
     "express": "4.18.1",
-    "glob": "7.1.6",
     "lz-string": "1.4.4",
     "normalize.css": "8.0.1",
     "prism-react-renderer": "1.0.2",
@@ -36,14 +35,18 @@
     "react-scroll": "1.7.14",
     "react-virtualized": "9.21.2",
     "reflect-metadata": "0.1.13",
-    "styled-components": "5.0.0"
+    "styled-components": "5.0.0",
+    "d3-scale": "3.3.0",
+    "d3-shape": "3.1.0",
+    "final-form-focus": "1.1.2",
+    "react-final-form": "6.5.2"
   },
   "devDependencies": {
-    "@babel/core": "7.7.5",
-    "@babel/plugin-proposal-class-properties": "7.7.4",
-    "@babel/plugin-proposal-optional-chaining": "7.9.0",
-    "@babel/preset-env": "7.7.6",
-    "@babel/preset-react": "7.7.4",
+    "@babel/core": "7.19.1",
+    "@babel/plugin-proposal-class-properties": "7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "7.18.9",
+    "@babel/preset-env": "7.19.1",
+    "@babel/preset-react": "7.12.1",
     "@types/express": "4.17.1",
     "@types/mdast": "3.0.10",
     "@types/node": "14.14.22",
