[global] fixed website building and repo linting
<!--- Commit was signed off by phytonmk@gmail.com with GPG key ID CF2DC815AE956C1F -->

--- a/tools/esbuild-plugin-semcore/package.json
+++ b/tools/esbuild-plugin-semcore/package.json
@@ -11,6 +11,9 @@
   "scripts": {
     "test": "jest"
   },
+  "devDependencies": {
+    "esbuild": "0.14.29"
+  },
   "peerDependencies": {
     "esbuild": "*"
   },
