--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,8 +34,6 @@ jobs:
       - name: Install dependencies
         run: |
           pnpm install --frozen-lockfile
-          cd website
-          pnpm install --frozen-lockfile
   build:
     runs-on: ubuntu-latest
     needs: setup
@@ -63,11 +61,6 @@ jobs:
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
-      - name: Install dependencies
-        run: |
-          pnpm install --frozen-lockfile
-          cd website
-          pnpm install --frozen-lockfile
       - name: Сache build
         uses: actions/cache@v2
         id: cache-build
@@ -77,6 +70,9 @@ jobs:
             semcore/icon/**/*.js
             semcore/icon/**/*.d.ts
           key: build-${{ hashFiles('semcore/**', 'tools/**', 'tsconfig.json', 'pnpm-lock.yaml') }}
+      - name: Install dependencies
+        run: |
+          pnpm install --frozen-lockfile
       - name: Build
         if: steps.cache-build.outputs.cache-hit != 'true'
         run: |
@@ -109,11 +105,6 @@ jobs:
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
-      - name: Install dependencies
-        run: |
-          pnpm install --frozen-lockfile
-          cd website
-          pnpm install --frozen-lockfile
       - name: Restore cache build
         uses: actions/cache@v2
         id: cache-build
@@ -126,6 +117,9 @@ jobs:
             semcore/illustration/**/*.mjs
             semcore/illustration/**/*.d.ts
           key: build-${{ hashFiles('semcore/**', 'tools/**', 'tsconfig.json', 'pnpm-lock.yaml') }}
+      - name: Install dependencies
+        run: |
+          pnpm install --frozen-lockfile
       - name: Lint
         run: pnpm lint
   test:
@@ -155,11 +149,6 @@ jobs:
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
-      - name: Install dependencies
-        run: |
-          pnpm install --frozen-lockfile
-          cd website
-          pnpm install --frozen-lockfile
       - name: Restore cache build
         uses: actions/cache@v2
         with:
@@ -171,6 +160,9 @@ jobs:
             semcore/illustration/**/*.mjs
             semcore/illustration/**/*.d.ts
           key: build-${{ hashFiles('semcore/**', 'tools/**', 'tsconfig.json', 'pnpm-lock.yaml') }}
+      - name: Install dependencies
+        run: |
+          pnpm install --frozen-lockfile
       - name: Test
         env:
           SCREENSHOT_URL: ${{ secrets.SCREENSHOT_URL }}
@@ -199,8 +191,6 @@ jobs:
       - name: Install dependencies
         if: steps.cache-modules.outputs.cache-hit != 'true'
         run: |
-          pnpm install --frozen-lockfile
-          cd website
           pnpm install --frozen-lockfile
   vo-build-icons:
     runs-on: macos-latest
@@ -237,9 +227,13 @@ jobs:
             semcore/illustration/**/*.mjs
             semcore/illustration/**/*.d.ts
           key: build-icons-${{ hashFiles('semcore/icon', 'tsconfig.json', 'pnpm-lock.yaml') }}
+      - name: Install dependencies
+        if: steps.cache-modules.outputs.cache-hit != 'true'
+        run: |
+          pnpm install --frozen-lockfile
       - name: Build
         if: steps.cache-build.outputs.cache-hit != 'true'
-        run: pnpm i && pnpm run build:icons
+        run: pnpm run build:icons
   vo-test:
     runs-on: macos-latest
     needs:
@@ -270,6 +264,10 @@ jobs:
             semcore/illustration/**/*.mjs
             semcore/illustration/**/*.d.ts
           key: build-icons-${{ hashFiles('semcore/icon', 'tsconfig.json', 'pnpm-lock.yaml') }}
+      - name: Install dependencies
+        if: steps.cache-modules.outputs.cache-hit != 'true'
+        run: |
+          pnpm install --frozen-lockfile
       - name: Install Browser
         run: npx playwright install webkit
       - name: Enable VoiceOver Automation
