[ci] fixed cache paths
<!--- Commit was signed off by phytonmk@gmail.com with GPG key ID CF2DC815AE956C1F -->

--- a/.github/workflows/publish-components.yml
+++ b/.github/workflows/publish-components.yml
@@ -57,7 +57,8 @@ jobs:
         id: cache-build
         with:
           path: |
-            **/lib
+            semcore/*/lib
+            tools/*/lib
             semcore/icon/**/*.js
             semcore/icon/**/*.mjs
             semcore/icon/**/*.d.ts
