--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -66,7 +66,8 @@ jobs:
         id: cache-build
         with:
           path: |
-            **/lib
+            semcore/*/lib
+            tools/*/lib
             semcore/icon/**/*.js
             semcore/icon/**/*.d.ts
           key: build-${{ hashFiles('semcore/**', 'tools/**', 'tsconfig.json', 'pnpm-lock.yaml') }}
