[illustration] added function for export getIllustrationPath
<!--- Commit was signed off by freeyoungstrong@gmail.com with GPG key ID EA2F630031F24EEF -->

<!--- Commit was signed off by j.mnizhek@semrush.com with GPG key ID 0B5264A4C3374D3E -->

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@ semcore/illustration/**/*.js
 semcore/illustration/**/*.mjs
 !semcore/illustration/**/*.config.js
 semcore/illustration/**/*.d.ts
+!semcore/illustration/src/**/*.js
+!semcore/illustration/src/**/*.d.ts
