--- a/semcore/errors/package.json
+++ b/semcore/errors/package.json
@@ -10,14 +10,14 @@
   "license": "MIT",
   "scripts": {
     "build": "build --source=js",
-    "test": "jest",
-    "upload-static": "gcs-upload svg/*.svg"
+    "test": "jest"
   },
   "dependencies": {
     "@semcore/utils": "^3.27",
     "@semcore/button": "^4",
     "@semcore/flex-box": "^4",
     "@semcore/format-text": "^3.0.0",
+    "@semcore/illustration": "1.1.0",
     "@semcore/typography": "^4"
   },
   "peerDependencies": {
