--- a/semcore/illustration/package.json
+++ b/semcore/illustration/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "transform": "icon-transform-svg",
     "build": "npm run transform -- --configFile=transform-svg.config.js",
-    "prebuild": "ls -d */ | egrep -v \"__tests__|svg\" | xargs rm -rf && rm *.svg || true"
+    "prebuild": "ls -d */ | egrep -v \"__tests__|svg|src\" | xargs rm -rf && rm *.svg || true",
+    "upload-static": "gcs-upload svg/*.svg"
   },
   "dependencies": {
     "@babel/runtime": "^7.17.9",
