[neighbor-location] Add correct work with the new version for dependency components
Signed-off-by: r.lysov <r.lysov@semrush.com>

<!--- Commit was signed off by r.lysov@semrush.com with GPG key ID A04B4646C408DA52 -->

--- a/semcore/input-mask/package.json
+++ b/semcore/input-mask/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@semcore/input": "^3.0.0",
+    "@semcore/neighbor-location": "^3",
     "@semcore/utils": "^3.15",
     "text-mask-core": "5.1.2"
   },
