--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "packageManager": "pnpm@7.0.0",
   "scripts": {
     "start": "pnpm playground",
-    "build": "pnpm build:icons && pnpm build:illustration && pnpm --filter @semcore/* --filter !@semcore/icon --filter !@semcore/ui run build",
+    "build": "pnpm build:icons && pnpm build:illustration && pnpm --filter @semcore/* --filter !@semcore/icon --filter !@semcore/illustration --filter !@semcore/ui run build",
     "build:icons": "pnpm --filter @semcore/icon run build",
     "build:illustration": "pnpm --filter @semcore/illustration run build",
     "typecheck": "pnpm --filter @semcore/* --filter !@semcore/babel-plugin-root --filter !@semcore/babel-plugin-styles --filter !@semcore/babel-plugin-react-semcore --filter !@semcore/babel-preset-ui --filter !@semcore/jest-preset-ui --filter !@semcore/babel-plugin-recharts --filter !@semcore/email --filter !@semcore/dep-checker --filter !@semcore/code-mod --filter !@semcore/icon-transform-svg --filter !@semcore/shadow-loader --filter !@semcore/generator-component exec tsc --noEmit",
