--- a/semcore/illustration/package.json
+++ b/semcore/illustration/package.json
@@ -9,7 +9,7 @@
   "license": "MIT",
   "scripts": {
     "transform": "icon-transform-svg",
-    "build": "npm run transform -- --configFile=transform-svg.config.js",
+    "build": "build --source=js && npm run transform -- --configFile=transform-svg.config.js",
     "prebuild": "ls -d */ | egrep -v \"__tests__|svg|src\" | xargs rm -rf && rm *.svg || true",
     "upload-static": "gcs-upload svg/*.svg"
   },
