[chore] Merge branch 'master' into major_neighbor-location
Signed-off-by: r.lysov <r.lysov@semrush.com>

# Conflicts:
#	semcore/color-picker/CHANGELOG.md

<!--- Commit was signed off by r.lysov@semrush.com with GPG key ID A04B4646C408DA52 -->

--- a/semcore/illustration/package.json
+++ b/semcore/illustration/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@semcore/illustration",
   "description": "Semrush Illustration Component",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "main": "index.js",
   "module": "index.js",
   "sideEffects": false,
@@ -9,7 +9,7 @@
   "license": "MIT",
   "scripts": {
     "transform": "icon-transform-svg",
-    "build": "npm run transform -- --configFile=transform-svg.config.js",
+    "build": "build --source=js && npm run transform -- --configFile=transform-svg.config.js",
     "prebuild": "ls -d */ | egrep -v \"__tests__|svg|src\" | xargs rm -rf && rm *.svg || true",
     "upload-static": "gcs-upload svg/*.svg"
   },
