--- a/semcore/illustration/package.json
+++ b/semcore/illustration/package.json
@@ -2,8 +2,9 @@
   "name": "@semcore/illustration",
   "description": "Semrush Illustration Component",
   "version": "1.1.2",
-  "main": "index.js",
-  "module": "index.js",
+  "main": "lib/cjs/index.js",
+  "module": "lib/es6/index.js",
+  "typings": "lib/types/index.d.ts",
   "sideEffects": false,
   "author": "UI-kit team <ui-kit-team@semrush.com>",
   "license": "MIT",
