--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "trim-newlines": "3.0.1",
     "glob-parent": "6.0.2",
     "braces": "3.0.2",
-    "@babel/runtime": "7"
+    "@babel/runtime": "7.19.0",
+    "@babel/core": "7.19.1"
   }
 }
